objects/TILBP__TI_Question__c.object
<CustomObject>
    <fields>
        <fullName>TILBP__Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__AssessmentAttempt__c</fullName>
        <label>Assessment Attempt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__Correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TILBP__Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__SFAssessmentAttempt__c</fullName>
        <label>Assessment Attempt</label>
        <referenceTo>TILBP__TI_Assessment_Attempt__c</referenceTo>
        <relationshipLabel>TI Questions</relationshipLabel>
        <relationshipName>TI_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>TI Question</label>
    <nameField>
        <label>TI Question ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TI Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TILBP__ID_is_unique</fullName>
        <active>true</active>
        <errorConditionFormula>VLOOKUP( 
$ObjectType.TILBP__TI_Question__c.Fields.Name , $ObjectType.TILBP__TI_Question__c.Fields.Name , 
Name) != &apos;&apos;</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Question ID is unique</errorMessage>
    </validationRules>
</CustomObject>